Update foundation with navigation fixes and modify apply.css to compensate for new link as menu header.  These fixes will now allow menus to work on ios.  Fixes #123.

--- a/src/styles/apply.css
+++ b/src/styles/apply.css
@@ -65,7 +65,7 @@ p.skip {
 }
 
 /* make room for the status icon */
-#bar li a {
+#bar li.link a {
   padding-left: 12px;
 }
 
